--- a/generos.html
+++ b/generos.html
@@ -15,26 +15,26 @@
                         <section class="BarraDeBusqueda">
                                 <div class="menu">
                                     <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
+                                    <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                         <a href="index.html" class="barratexto">Home</a>  
                                         <a href="artistas.html" class="barratexto">Artistas</a>
                                         <a href="albumes.html" class="barratexto">Albumes</a>
-                                        <a href="playlists.html" class="barratexto">Playlists</a>
                                         <a href="generos.html" class="barratexto">Géneros</a>
+                                        <a href="playlists.html" class="barratexto">Playlists</a>
+                                        <div class="perfil-menu">
+                                <section class="icperfil">
+                                        <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user">Log in</h1></a>
+                                </section>
+                        </div>
                                 </div>
                                 <form action="search-results.html" method="GET" class="buscar">
                                     <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
                                     <button type="submit" class="button">Buscar</button>
                             </form>
                         </section>
-                        <div class="perfil-menu">
-                                <section class="icperfil">
-                                        <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><p class="user">Log in</p></a>
-                                </section>
-                        </div>
                 </nav>
                 </article>
             </header>
-
     <div class="acaja">
             <h2 class="pag"> Géneros</h2>
             <section class="listas">
@@ -42,14 +42,14 @@
                 <ul>
                         <li>Latino</li>
                         <a href="./detail-album.html" class="names">LATINO</a>
-                        <a href="./detail-genres.html"><img class="fotos" src="./img/latino.jpg" alt="FOTO GENERO LATINO"></a>
+                        <a href="./detail-genres.html"><img class="fotos" src="./img/latin.jpeg" alt="FOTO GENERO LATINO"></a>
                 </ul>
               </div>
              <div class="caja">
                <ul>
                        <li>Pop</li>
                         <a href="./detail-album.html" class="names">POP</a>
-                        <a href="./detail-genres.html"><img class="fotos" src="./img/pop (1).jpg" alt="FOTO GENERO POP"></a>
+                        <a href="./detail-genres.html"><img class="fotos" src="./img/pop.jpeg" alt="FOTO GENERO POP"></a>
                </ul>
        </div>
        <div class="caja">
@@ -69,8 +69,8 @@
        <div class="caja">
         <ul>
                 <li>Reggae</li>
-                <a href="./detail-album.html" class="names">CLÁSICA</a>
-                <a href="./detail-genres.html"><img class="fotos" src="./img/clasicam.jpg" alt="FOTO GENERO HIPPIE"></a>
+                <a href="./detail-album.html" class="names">HOUSE</a>
+                <a href="./detail-genres.html"><img class="fotos" src="./img/house.jpeg" alt="FOTO GENERO HOUSE"></a>
         </ul>
 </div>
 </div>
