--- a/albumes.html
+++ b/albumes.html
@@ -9,35 +9,35 @@
     <title>Albumes</title>
 </head>
 <body>
-        <header>
-     
-                <article class="cajainicio">
-                    <nav class="header-items">
-                        <section class="BarraDeBusqueda">
-                                <div class="menu">
-                                    <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
-                                        <a href="index.html" class="barratexto">Home</a>  
-                                        <a href="artistas.html" class="barratexto">Artistas</a>
-                                        <a href="albumes.html" class="barratexto">Albumes</a>
-                                        <a href="playlists.html" class="barratexto">Playlists</a>
-                                        <a href="generos.html" class="barratexto">Géneros</a>
-                                </div>
-                                <form action="search-results.html" method="GET" class="buscar">
-                                    <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
-                                    <button type="submit" class="button">Buscar</button>
-                            </form>
+    <header>
+        <article class="cajainicio">
+            <nav class="header-items">
+                <section class="BarraDeBusqueda">
+                        <div class="menu">
+                            <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
+                            <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
+                                <a href="index.html" class="barratexto">Home</a>  
+                                <a href="artistas.html" class="barratexto">Artistas</a>
+                                <a href="albumes.html" class="barratexto">Albumes</a>
+                                <a href="generos.html" class="barratexto">Géneros</a>
+                                <a href="playlists.html" class="barratexto">Playlists</a>
+                                <div class="perfil-menu">
+                        <section class="icperfil">
+                                <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user">Log in</h1></a>
                         </section>
-                        <div class="perfil-menu">
-                                <section class="icperfil">
-                                        <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><p class="user">Log in</p></a>
-                                </section>
+                </div>
                         </div>
-                </nav>
-                </article>
-            </header>
+                        <form action="search-results.html" method="GET" class="buscar">
+                            <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
+                            <button type="submit" class="button">Buscar</button>
+                    </form>
+                </section>
+        </nav>
+        </article>
+    </header>
             <main>
                 <section class="acaja">
-                        <h2 class="pag">Albumes</h2>
+                        <h2 class="pag">Álbumes</h2>
                         <ul class="listas">
 
                                 <li class="caja">
@@ -61,7 +61,15 @@
                                     <a href="./detail-album.html"><img class="fotos" src="./img/Heathens.jpg" alt=""></a>
                                 </li>
                             </ul>
-        
+                            <div class="slideralbum">
+                                <ul>
+                                        <li><img src="img/tini.jpg" alt=""></li>
+                                        <li><img src="img/x.jpg" alt=""></li>
+                                        <li><img src="img/evolve imagine dragons.jpg" alt=""></li>
+                                        <li><img src="img/changes.jpg" alt=""></li>
+                                        <li><img src="img/Heathens.jpg" alt=""></li>
+                                </ul>   
+                                </div>
                 </section>
                     </main>
             <footer> <div class="footer">
