--- a/detail-track.html
+++ b/detail-track.html
@@ -15,27 +15,38 @@
                         <section class="BarraDeBusqueda">
                                 <div class="menu">
                                     <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
+                                    <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                         <a href="index.html" class="barratexto">Home</a>  
                                         <a href="artistas.html" class="barratexto">Artistas</a>
                                         <a href="albumes.html" class="barratexto">Albumes</a>
-                                        <a href="playlists.html" class="barratexto">Playlists</a>
                                         <a href="generos.html" class="barratexto">Géneros</a>
+                                        <a href="playlists.html" class="barratexto">Playlists</a>
+                                        <div class="perfil-menu">
+                                <section class="icperfil">
+                                        <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user">Log in</h1></a>
+                                </section>
+                        </div>
                                 </div>
                                 <form action="search-results.html" method="GET" class="buscar">
                                     <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
                                     <button type="submit" class="button">Buscar</button>
                             </form>
                         </section>
-                        <div class="perfil-menu">
-                                <section class="icperfil">
-                                        <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><p class="user">Log in</p></a>
-                                </section>
-                        </div>
                 </nav>
                 </article>
             </header>
     <main>
-      
+      <div class=detallestrack>
+              <h3>Peaches</h3>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/tQ0yjYUFKAE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <ul>
+                <li>Artista: Justin Bieber</li>
+                <li>Artista invitado: Daniel Caesar, Giveon</li>
+                <li>Álbum: Justice</li>
+                <li>Fecha de lanzamiento: 2021</li>
+                <li>Álbum: Justice</li>
+        </ul>
+      </div>
     </main>
     <footer> <div class="footer">
                 
