--- a/perfil.html
+++ b/perfil.html
@@ -10,28 +10,28 @@
 </head>
 <body>
     <header>
-     
         <article class="cajainicio">
             <nav class="header-items">
                 <section class="BarraDeBusqueda">
                         <div class="menu">
                             <a href="index.html"><img class="logoheader" src="./img/logosoundnow.jpeg" alt="logo"></a>
+                            <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
                                 <a href="index.html" class="barratexto">Home</a>  
                                 <a href="artistas.html" class="barratexto">Artistas</a>
                                 <a href="albumes.html" class="barratexto">Albumes</a>
-                                <a href="playlists.html" class="barratexto">Playlists</a>
                                 <a href="generos.html" class="barratexto">Géneros</a>
+                                <a href="playlists.html" class="barratexto">Playlists</a>
+                                <div class="perfil-menu">
+                        <section class="icperfil">
+                                <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user">Log in</h1></a>
+                        </section>
+                </div>
                         </div>
                         <form action="search-results.html" method="GET" class="buscar">
                             <input class= "b" id= "ba" type="text" name="search" placeholder = "Search">
                             <button type="submit" class="button">Buscar</button>
                     </form>
                 </section>
-                <div class="perfil-menu">
-                        <section class="icperfil">
-                                <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><p class="user">Log in</p></a>
-                        </section>
-                </div>
         </nav>
         </article>
     </header>
